--- a/_posts/2016-09-19-welcome.md
+++ b/_posts/2016-09-19-welcome.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Welcome and Getting Started"
 date:   2016-09-19 22:10:00 +0200
+description: 2016-09-19
 tags: ['example', 'welcome']
 author: "Your Name"
 ---
